# starshade-flasher-design

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ROADMAP.md  references.md  vision.md
docs/math/: arya2021_optical_shield.md  guest_pellegrino_flashing.md  jatusripitak_arya_tessellations.md  kreider_arya_corrugated.md
examples/: plot_zero_thickness_flasher.py
src/starshade_flasher/: __init__.py  geometry.py  patterns.py  solvers.py  visualization.py
tests/: test_import.py  test_visualization_zero_thickness.py  test_zero_thickness_flasher.py
